--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, React">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Titulo -->
-    <title>Jane Doe | Desarrollo Web Front-End</title>
+    <title>Nancy Salazar | Desarrollo Web Front-End</title>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="imagenes/icono.png">
     <!-- Bootstrap -->
@@ -54,10 +54,9 @@
     <!-- Seccion Hero -->
     <section class="hero align-items-stretch">
       <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-        <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/imagenes-desarrolladores/desarrollador-ejemplo.svg" alt="Foto de Jane Doe">
-        <h1>Hola, soy Jane Doe</h1>
+        <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/fotodenancy.jpg" alt="Foto de Nancy">
+        <h1>¡Hola, soy Nancy Salazar!</h1>
         <!--<h2>Desarrollo sitios web y escribo artículos sobre programación.</h2>-->
-
         <!--Animación con JavaScript-->
         <h2 class="text-primary mb-4" id="typewriter"></h2>
       </div>
@@ -69,8 +68,8 @@
     <!-- Sobre mi -->
     <section id="sobre-mi" class="sobre-mi seccion-oscura">
       <div class="contenedor">
-        <h2 class="seccion-titulo">Conoce a Jane Doe</h2>
-        <p class="seccion-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. Donec et venenatis nunc, vel hendrerit ex. Vestibulum sapien ipsum, rutrum eget est et, ultricies sagittis urna. In non volutpat est. Vestibulum diam sapien, ultrices et euismod at, ultrices ut odio. Nullam in massa et elit ultrices suscipit. Proin lacinia leo ac posuere placerat.</p>
+        <h2 class="seccion-titulo">Conoce más acerca de mí</h2>
+        <p class="seccion-texto">Soy estudiante de maestría en Administración de Tecnologías de la Información. Actualmente soy instructora en Tecnolochicas PRO impartiendo clases de programación Front-end y me gustan los gatitos.</p>
       </div>
     </section>
 
@@ -82,19 +81,19 @@
           <div class="columna col-12 col-md-4">
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Desarrollo Web</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
+            <p>Construyo sitios web responsivos y modernos con diferentes tecnologías</p>
             <div class="badges-contenedor">
               <span class="badge text-bg-primary">HTML</span>
               <span class="badge text-bg-primary">CSS</span>
               <span class="badge text-bg-primary">JavaScript</span>
-              <span class="badge text-bg-primary">React</span>
+              <span class="badge text-bg-primary">Bootstrap</span>
             </div>
           </div>
           <!-- Articulos -->
           <div class="columna col-12 col-md-4">
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Artículos</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
+            <p>Escribo para diferentes plataformas en donde se tocan temas de Programación Web, además tengo mi propio blog en dev.to </p>
             <div class="badges-contenedor">
               <span class="badge text-bg-primary">Escribir</span>
               <span class="badge text-bg-primary">Editar</span>
@@ -105,11 +104,11 @@
           <div class="columna col-12 col-md-4">
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Estudiante</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
+            <p>Soy estudiante de segundo trimestre en la maestría de Administración de Tecnologías de la Información en el Tec. de Monterrey. </p>
             <div class="badges-contenedor">
-              <span class="badge text-bg-primary">Tecnolochicas PRO</span>
-              <span class="badge text-bg-primary">Desarrollo Web</span>
-              <span class="badge text-bg-primary">Python</span>
+              <span class="badge text-bg-primary">Maestría</span>
+              <span class="badge text-bg-primary">TIC</span>
+              <span class="badge text-bg-primary">Tec. de Mty.</span>
             </div>
           </div>
         </div>
@@ -289,7 +288,7 @@
           <div class="carousel-item active">
             <div class="container">
               <img class="testimonio-imagen rounded-circle" src="imagenes/cliente1.svg" alt="Foto de Gino">
-              <p class="testimonio-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed aliquam interdum nisi a placerat.</p>
+              <p class="testimonio-texto">Estuve trabajando 3 años con Nancy y resultó ser un gran elemento en nuestro equipo, amo sus súper poderes</p>
               <div class="testimonio-info">
                 <p class="cliente">Gino</p>
                 <p class="cargo">Gerente de proyectos en DesarrolloWeb</p>
@@ -299,7 +298,7 @@
           <div class="carousel-item">
             <div class="container">
               <img class="testimonio-imagen rounded-circle" src="imagenes/cliente2.svg" alt="Foto de Nora">
-              <p class="testimonio-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed aliquam interdum nisi a placerat.</p>
+              <p class="testimonio-texto">Nancy ha sido una de las mejores compañeras de trabajo que he tenido, admiro su gestión de tiempo y sus habilidades de liderazgo.</p>
               <div class="testimonio-info">
                 <p class="cliente">Nora</p>
                 <p class="cargo">Gerente de DiseñaMiPáginaWeb</p>
@@ -309,7 +308,7 @@
           <div class="carousel-item">
             <div class="container">
               <img class="testimonio-imagen rounded-circle" src="imagenes/cliente3.svg" alt="Foto de Leonardo">
-              <p class="testimonio-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed aliquam interdum nisi a placerat.</p>
+              <p class="testimonio-texto">Nancy ha demostrado sus habilidades en programación front-end, sin duda volvería a colaborar con ella.</p>
               <div class="testimonio-info">
                 <p class="cliente">Leonardo</p>
                 <p class="cargo">Director de AprendeAProgramar</p>
@@ -334,7 +333,7 @@
         <div class="container text-center rectangulo d-flex justify-content-evenly">
           <div class="row">
             <div class="col-12 col-md-4 seccion-titulo">
-              ¡Hablemos!
+              Mándame un e-mail
             </div>
             <div class="col-12 col-md-4 descripcion">
               Contáctame para iniciar tu proyecto de desarrollo web y haré que tu visión se vuelva realidad.
@@ -355,25 +354,25 @@
     <!-- Pie de pagina (footer) -->
     <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center"> 
       <img class="footer-logo" src="imagenes/icono-blanco.svg" alt="Logo del portafolio">
-      <p class="footer-texto text-center">Aprendo y creo todos los días.<br>Creemos un proyecto juntos.</p>
+      <p class="footer-texto text-center">Si lo puedo imaginar,<br>lo puedo programar {💗}</p>
       <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://twitter.com/NancyNSalazar" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-twitter"></i>
         </a>
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/nancynsalazar" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-github"></i>
         </a>
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.linkedin.com/in/nancynsalazar/" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-linkedin"></i>
         </a>
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.instagram.com/nancyNsalazar/" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-instagram"></i>
         </a>
-        <a href="mailto:janedoe@micorreo.com" target="_blank" rel="noopener noreferrer">
+        <a href="mailto:hola@nancynsalazar.tech" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-envelope"></i>
         </a>
       </div>
-      <div class="derechos-de-autor">Creado por Jane Doe (2022) &#169;</div>
+      <div class="derechos-de-autor">Creado con mucho 💗 por Nancy Salazar (2022) &#169;</div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
